# data-storm-DeepCell

./: .gitignore  README.md  app.py  app_v2.py  clustering.ipynb  pyproject.toml  readme_EDA.md  requirements.txt
dashboard/: app.py
data/: sample_submission_storming_round.csv  submission.csv  test_storming_round.csv  train_storming_round.csv
nill-agent-prediction-model/: app.py  app_v1.py  submission.csv
notebooks/: EDA.ipynb
